--- a/Visualization.ipynb
+++ b/Visualization.ipynb
@@ -2163,13 +2163,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#tigershark 24% deaths and whiteshark 23%, the tigershark is the most dangerous"
+    "#tigershark 24% deaths and whiteshark 23%, the tigershark is the most dangerous. \n",
+    "# The white sharks have also the greatest percentages of no injuries."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "699a1d7c",
+   "id": "9dc7f0ab",
    "metadata": {},
    "outputs": [],
    "source": []
