--- a/Sharknado_limpiezaDF.ipynb
+++ b/Sharknado_limpiezaDF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,13 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import re\n"
+    "import re\n",
+    "import src.cleaning as cl\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +428,7 @@
        "[25723 rows x 24 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +520,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +796,7 @@
        "[25723 rows x 12 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +820,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +853,7 @@
        " 'species_']"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1130,7 @@
        "[25723 rows x 12 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1141,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1394,7 @@
        "[25723 rows x 12 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1405,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1414,7 +1415,7 @@
        "'nan'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1425,28 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def resolucion(x):\n",
-    "    x=str(x).lower()\n",
-    "    if \"no injury\" in x:\n",
-    "        x= \"no injury\"\n",
-    "        return x\n",
-    "    elif \"fatal\" in x:\n",
-    "        x= \"death\"\n",
-    "        return x\n",
-    "    elif x == \"nan\":\n",
-    "        return np.nan\n",
-    "    else:\n",
-    "        x= \"bite\"\n",
-    "        return x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1723,19 +1703,19 @@
        "[25723 rows x 13 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"resolucion\"]= df.injury.apply(resolucion)\n",
+    "df[\"resolucion\"]= df.injury.apply(cl.resolucion)\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1744,7 +1724,7 @@
        "(25723, 13)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1756,29 +1736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sexo(x):\n",
-    "    x=str(x).lower()\n",
-    "    if \"f\" in x:\n",
-    "        x= \"f\"\n",
-    "        return x\n",
-    "    elif \"m\" in x:\n",
-    "        x= \"m\"\n",
-    "        return x\n",
-    "    elif x == \"nan\":\n",
-    "        return np.nan\n",
-    "    else:\n",
-    "        x= \"otro\"\n",
-    "        return np.nan\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2067,19 +2025,19 @@
        "[25723 rows x 14 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"genre\"]= df.sex.apply(sexo)\n",
+    "df[\"genre\"]= df.sex.apply(cl.sexo)\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2089,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2098,7 +2056,7 @@
        "(25723, 14)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2109,7 +2067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2119,7 +2077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2408,7 +2366,7 @@
        "[8703 rows x 14 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2419,7 +2377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2430,7 +2388,7 @@
        "Name: genre, dtype: int64"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2441,7 +2399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2458,7 +2416,7 @@
        "Name: dead, dtype: int64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2469,45 +2427,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def deaths(x):\n",
-    "    if x!=x:\n",
-    "        return np.nan\n",
-    "    x=str(x).lower()\n",
-    "    if \"n\" in x:\n",
-    "        x= 0\n",
-    "        return x\n",
-    "    elif \"m\" in x:\n",
-    "        x= 0\n",
-    "        return x\n",
-    "    elif \"unkn\" in x:\n",
-    "        return np.nan        \n",
-    "    elif  \"y\" in x:\n",
-    "        x=1\n",
-    "        return x        \n",
-    "    else:\n",
-    "        x = 1\n",
-    "        return x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-69-3731f2f3d248>:1: SettingWithCopyWarning: \n",
+      "<ipython-input-21-3bc93d8f2eb4>:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  sinan[\"deaths\"]= df.dead.apply(deaths)\n"
+      "  sinan[\"deaths\"]= df.dead.apply(cl.deaths)\n"
      ]
     },
     {
@@ -2808,19 +2740,19 @@
        "[8703 rows x 15 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sinan[\"deaths\"]= df.dead.apply(deaths)\n",
+    "sinan[\"deaths\"]= df.dead.apply(cl.deaths)\n",
     "sinan"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2831,7 +2763,7 @@
        "Name: deaths, dtype: int64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2842,7 +2774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2862,7 +2794,7 @@
        "Name: especie, Length: 1549, dtype: int64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2873,7 +2805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -3882,7 +3814,7 @@
        " ...]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3895,49 +3827,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sharks(x):\n",
-    "    x=str(x).lower()\n",
-    "    if \"white shark\" in x:\n",
-    "        x= \"whiteshark\"\n",
-    "        return x\n",
-    "    elif \"bull\" in x:\n",
-    "        x= \"bullshark\"\n",
-    "        return x\n",
-    "    elif x == \"nan\":\n",
-    "        return np.nan\n",
-    "    elif \"tiger\" in x:\n",
-    "        x= \"tigershark\"\n",
-    "        return x        \n",
-    "    elif  \"whitetip\" in x:\n",
-    "        x=\"whitetip\"\n",
-    "        return x\n",
-    "    elif  \"hammer\" in x:\n",
-    "        x=\"hammer\"\n",
-    "        return x \n",
-    "    else:\n",
-    "        x = \"other\"\n",
-    "        return x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-74-bb43868ca13a>:1: SettingWithCopyWarning: \n",
+      "<ipython-input-25-482ec73ef67e>:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  sinan[\"sharktype\"]= df.especie.apply(sharks)\n"
+      "  sinan[\"sharktype\"]= df.especie.apply(cl.sharks)\n"
      ]
     },
     {
@@ -4250,19 +4152,19 @@
        "[8703 rows x 16 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sinan[\"sharktype\"]= df.especie.apply(sharks)\n",
+    "sinan[\"sharktype\"]= df.especie.apply(cl.sharks)\n",
     "sinan"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -4277,7 +4179,7 @@
        "Name: sharktype, dtype: int64"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4288,7 +4190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -4418,7 +4320,7 @@
        "[8703 rows x 4 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4430,7 +4332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4439,7 +4341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -4569,7 +4471,7 @@
        "[635 rows x 4 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4581,7 +4483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -4711,7 +4613,7 @@
        "[6302 rows x 4 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
